--- a/popup.html
+++ b/popup.html
@@ -12,22 +12,31 @@
   </head>
   <body tabindex="1">
 
-    <div class="navbar navbar-default">
-      <div class="navbar-header">
-        <span class="navbar-brand">TweetyLink</span>
-        <i class="icon icon-material-settings icon-material-white"></i>
+    <div class="nav-bar">
+      <div class="top-bar"></div>
+      <div class="nav-bar-info">
+        <span>TweetyLink</span>
+        <i class="icon icon-material-more-vert"></i>
       </div>
-     
     </div>
+     
 
     <div id="main-view">
 
       <div id="view-sign-in">
-        <h1>Hi</h1>
-        <p class="lead">Thanks for downloading TweetyLink!
-        <br><br>
-        To get started, just click the button below...</p>
-        <button type="button" class="btn btn-primary btn-lg" id="btn-sign-in">SIGN IN WITH TWITTER</button>
+        <div id="sign-in-greeting">
+          <h1>Hi</h1>
+        </div>
+        <div id="sign-in-instructions">
+          <p class="lead">
+          Thanks for downloading TweetyLink!
+          <br><br>
+          To get started, just click the button below...
+          </p>
+        </div>
+        <div id="sign-in-button">
+          <button type="button" class="btn btn-lg" id="btn-sign-in">SIGN IN WITH TWITTER</button>
+        </div>
       </div>
 
       <div id="view-tweets">
@@ -48,8 +57,8 @@
             <div class="row-action-primary profile-img" id="profile-img-2"></div>
             <div class="row-content">
               <div class="least-content">10m</div>
-              <h4 class="list-group-item-heading"><a href="http://josh.farrant.me">http://josh.farrant.me</a></h4>
-              <p class="list-group-item-text">@FarPixel</p>
+              <h4 class="list-group-item-heading">@KevinBox</h4>
+              <p class="list-group-item-text">Trying out a new design for my site <a href="http://www.kevinbox.co.uk">http://www.kevinbox.co.uk/classic.html</a></p>
             </div>
           </div>
 
@@ -59,11 +68,24 @@
             <div class="row-action-primary profile-img" id="profile-img-3"></div>
             <div class="row-content">
               <div class="least-content">15m</div>
-              <h4 class="list-group-item-heading">@FarPixel</h4>
-              <p class="list-group-item-text"><a href="http://josh.farrant.me">http://josh.farrant.me</a></p>
+              <h4 class="list-group-item-heading">@charlesrchance</h4>
+              <p class="list-group-item-text"><a href="http://www.sipcentric.com">http://www.sipcentric.com</a></p>
             </div>
           </div>
+
           <div class="list-group-separator"></div>
+
+          <div class="list-group-item">
+            <div class="row-action-primary profile-img" id="profile-img-4"></div>
+            <div class="row-content">
+              <div class="least-content">15m</div>
+              <h4 class="list-group-item-heading">@DavidMaitland</h4>
+              <p class="list-group-item-text"><a href="http://www.davidmaitland.me">http://www.davidmaitland.me</a></p>
+            </div>
+          </div>
+
+          <div class="list-group-separator"></div>
+
         </div>
       </div>
 
